<resources>
    <string name="app_name">Card app</string>
    <string name="test">Test</string>
    <string name="launch">Launch</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="field_is_empty">Field can not be empty! </string>
    <string name="name">Name:</string>
    <string name="title">Title:</string>
    <string name="text">Text:</string>
    <string name="postcard_text_from">from</string>
</resources>